# toolbox

./: .gitignore  .kiroignore  README.md  commands.json  index.html  package-lock.json  package.json  release.bat  releases.md  vercel.json  vite.config.ts
.github/workflows/: release.yml
builds/: Toolbox_1.0.0_x64_en-US.msi
docs/: FUTURE.md  PLUGIN_GUIDE.md
graphify-out/: .graphify_analysis.json  .graphify_root  graph.json  manifest.json
graphify-out/cache/: stat-index.json
plugins/_template/: README.md  main.py
site/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
site/public/: robots.txt
site/src/: content.config.ts
site/src/components/: CommandPalette.astro  DownloadButton.tsx  FeatureCard.astro  Footer.astro  Header.astro  ThemeToggle.tsx
site/src/content/: ARCHITECTURE.md  CHANGELOG.md  commands.md  plugins.md  roadmap.md
site/src/layouts/: Base.astro  Docs.astro
site/src/lib/: github.ts  site.ts
site/src/pages/: 404.astro  changelog.astro  download.astro  index.astro
site/src/pages/api/: health.ts  latest.ts  releases.ts
site/src/pages/docs/: architecture.astro  commands.astro  plugins.astro  roadmap.astro
site/src/styles/: global.css
src/: App.tsx  commands_store.rs  executor.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands_store.rs  error.rs  exe_icon.rs  executor.rs  favicon.rs  history.rs  lib.rs  logger.rs  marketplace.rs  models.rs  paths.rs  plugins.rs
src/components/: AddCommandModal.tsx  CommandInput.tsx  CommandItem.tsx  CommandList.tsx  HistoryPanel.tsx  Launcher.tsx  LucideIconPicker.tsx  MarketplaceModal.tsx  SettingsModal.tsx  TitleBar.tsx  Toast.tsx  Toolbox.tsx
src/hooks/: useCommands.ts  useHistory.ts  useTheme.ts  useToast.ts
src/lib/: api.ts
src/styles/: global.css  modal.css  titlebar.css
src/types/: index.ts
