[package]
name = "toolbox"
version = "1.0.0"
description = "Toolbox para Windows com sistema de plugins"
authors = ["Rodrigo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
reqwest = { version = "0.12", features = ["default"] }
base64 = "0.22"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
url = "2.5"
percent-encoding = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
