[package]
name = "toolbox"
version = "1.0.0"
description = "Toolbox para Windows com sistema de plugins"
authors = ["Rodrigo"]
edition = "2021"
rust-version = "1.77"
build = "build.rs" 

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["default"] }
base64 = "0.22"

log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
url = "2.5"
percent-encoding = "2.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
